# spirit

./: .coveragerc  .django-stubs  .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  model_tests.ipynb  mypy.ini  pyproject.toml  requirements-ml.txt  requirements.txt
.github/: changelog.yaml
.github/workflows/: backend.yml  changelog.yml  codacy.yml  codeql.yml  dependency-review.yml  django.yml  docker-publish.yml  label.yml  probe.yml  python-app.yml  python-publish.yml  python-publish.yml.yml  python.yml  stale.yml
.github_/: dependabot.yml
.github_/workflows/: stale.yml
app/bot/services/: telegram.py
app/config/: .example.env
app/core/: di.py  tasks.py  typings.py
app/di/: __init__.py  containers.py
app/infra/: orm.py  redis.py  rq.py
app/infra/utils/: runtime_conf.py  typings.py
app/model/: containers.py  dialogpt.py
app/model/sevices/: dialogpt.py
app/model/supervised_finetuning/: trainer.py
app/modules/apps/shows/: models.py
app/modules/bot/: telegram.py
app/modules/bot/services/: telegram.py
app/modules/django/apps/settings/: base.py  celery.py  utils.py
app/modules/django/apps/shows/: apps.py  models.py
app/modules/model/: dialogpt.py
app/modules/neural_networks/: typings.py
app/modules/neural_networks/services/: base.py  dialogpt.py  diffusers.py  llama.py
app/modules/random_events/: consts.py  typings.py
app/modules/random_events/entity/: random_events.py
app/modules/random_events/services/: base.py  random_events.py
apps/bot/: models.py
apps/core/: consts.py
apps/user/: models.py  views.py
config/: __init__.py  asgi.py  redis.py  rq.py
config/django_settings/: base.py  celery.py  utils.py
core/domain/: ports.py  services.py  value_objects.py
core/domain/entities/: chat.py  user.py
core/domain/repositories/: user_repository.py
core/domain/services/: dialogpt_service.py  random_event_service.py  telegram.py  user_service.py
core/domain/strategies/: default.py  keyword.py  regex.py
core/domain/use_cases/: example.py  register_user_use_case.py
core/interfaces/abstractions/: user.py
core/interfaces/implementations/: django_user.py
core/value_objects/: email.py
dependencies/: di_config.py
docker/: Dockerfile
requirements/: dev.txt  prod.txt
scripts/: dev-celery.sh  dev-server-bot.sh  dev-server.sh  gunicorn.sh  lint.sh  migrate.sh  tests.sh
scripts/utils/: graceful-exit.sh  prestart.sh  start-gunicorn.sh
settings/: asgi.py  django.py  urls.py
spirit/core/domain/: ports.py  services.py  value_objects.py
spirit/core/domain/strategies/: base.py  default.py  keyword.py  regex.py  vikhr.py
spirit/settings/: asgi.py  django.py  telegram.py  urls.py
spirit/telegram_bot/: admin.py  apps.py  consumers.py  exceptions.py  health.py  models.py  signals.py  urls.py  views.py
spirit/telegram_bot/application/: bot_controller.py
spirit/telegram_bot/infrastructure/adapters/: telegram.py
spirit/telegram_bot/infrastructure/repositories/: django.py
spirit/telegram_bot/migrations/: 0001_initial.py
spirit/telegram_bot/static/admin/css/: strategy_admin.css
spirit/telegram_bot/static/admin/js/: bot_control.js  strategy_admin.js
spirit/telegram_bot/templates/telegram_bot/: status.html
telegram_bot/: admin.py  api.py  apps.py  consumers.py  models.py  routing.py  signals.py  urls.py  views.py
telegram_bot/application/: bot_controller.py
telegram_bot/infrastructure/adapters/: telegram.py
telegram_bot/infrastructure/repositories/: django.py
