[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spirit"
version = "0.1.0"
description = "Telegram Bot with Django Admin"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
    "aiogram>=3.4",
    "django-redis>=5.2",
    "channels>=4.1",
    "mypy-extensions>=1.0",
    "django-stubs>=4.2",
    "django-stubs-ext>=4.2",
    "pandas>=2.3.2",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
namespaces = false

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",  # Missing type annotation for self in method
    "ANN102",  # Missing type annotation for cls in classmethod
    "D",       # pydocstyle errors
    "EM",      # Error message formatting
    "ICN",     # Import conventions
    "NPY",     # NumPy
    "PD",      # pandas
    "PGH",     # pandas-grouper
    "PL",      # Pylint
    "PTH",     # Pathlib
    "RET",     # Return
    "RSE",     # Raise
    "SIM",     # Simplicity
    "TCH",     # Type checking
    "TD",      # Type definition
    "TRY",     # Try/except
    "UP",      # Unpythonic
    "YTT",     # Yoda-style tests
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"settings/*.py" = ["ANN", "S101", "TCH"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]

# Настройка django-stubs
[[tool.mypy.overrides]]
module = [
    "django.*",
    "django",
]
ignore_missing_imports = true

# Настройка для конкретных модулей
[tool.mypy."core.*"]
follow_imports = "silent"
ignore_missing_imports = true

[tool.mypy."telegram_bot.*"]
follow_imports = "silent"
ignore_missing_imports = true

[tool.mypy."settings.*"]
follow_imports = "silent"
ignore_missing_imports = true

[tool.mypy."*.migrations.*"]
ignore_errors = true
