[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spirit"
version = "0.1.0"
description = "Telegram Bot with Django Admin"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
    "aiogram>=3.4",
    "django-redis>=5.2",
    "channels>=4.1",
    "mypy-extensions>=1.0",
    "django-stubs>=4.2",
    "django-stubs-ext>=4.2",
    "pandas>=2.3.2",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]

[tool.setuptools]
include-package-data = true
packages = {find = {where = ["spirit"], include = ["*"]}}

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C",
    "DTZ",
    "E",
    "EXE",
    "F",
    "G",
    "I",
    "ICN",
    "ISC",
    "N",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PYI",
    "RUF",
    "S",
    "T20",
    "TID",
    "UP",
    "W",
    "YTT",
]
extend-ignore = [
    "PLR",  # Too many rule violations for refactoring
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"settings/*.py" = ["S101"]
"*/migrations/*" = ["N806", "N815"]
"*/tests/*" = ["S101", "S106"]
"*/test_*.py" = ["S101", "S106"]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
mypy_path = ["spirit"]

[[tool.mypy.overrides]]
module = [
    "django.*",
    "aiogram.*",
    "channels.*",
    "asgiref.*",
]
ignore_missing_imports = true

[tool.mypy."spirit.*"]
follow_imports = "silent"

[tool.mypy."*.migrations.*"]
ignore_errors = true
